More work on the DAQ integration

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,9 @@ sorting=ynt
 \usepackage{xcolor}  % For syntax highlighting colors (optional)
 
 % Custom symbols
+\newcommand{\pbinv}{\ensuremath{\mathrm{pb}^{-1}}}
 \newcommand{\fbinv}{\ensuremath{\mathrm{fb}^{-1}}}
+\newcommand{\kHz}{\ensuremath{\,\mathrm{kHz}}}
 
 % Custom configuration for code appearance
 \lstset{
