Adding infrstructure for references

--- a/references.bib
+++ b/references.bib
@@ -106,3 +106,22 @@
   note = {Accessed: 2024-09-28},
 }
 %
+@article{CMS:2024zhe,
+    author = "Hayrapetyan, Aram and others",
+    collaboration = "CMS",
+    title = "{Enriching the Physics Program of the CMS Experiment via Data Scouting and Data Parking}",
+    eprint = "2403.16134",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-EXO-23-007, CERN-EP-2024-068",
+    month = "3",
+    year = "2024"
+}
+%
+@online{micron60tb,
+  author = {Micron},
+  title = {Micron 6550 ION NVMe SSD},
+  year = {2024},
+  url = {https://www.micron.com/products/storage/ssd/data-center-ssd/6550-ion},
+  note = {Accessed: 2024-11-27},
+}
