Figure about Conditions DB

--- a/references.bib
+++ b/references.bib
@@ -106,6 +106,19 @@
   note = {Accessed: 2024-09-28},
 }
 %
+@article{Gruttola_2010,
+   title={First experience in operating the population of the condition databases for the CMS experiment},
+   volume={219},
+   ISSN={1742-6596},
+   url={http://dx.doi.org/10.1088/1742-6596/219/4/042046},
+   DOI={10.1088/1742-6596/219/4/042046},
+   number={4},
+   journal={Journal of Physics: Conference Series},
+   publisher={IOP Publishing},
+   author={Gruttola, Michele De and Guida, Salvatore di and Glege, Frank and Innocente, Vincenzo and Paolucci, Pierluigi and Futyan, David and Govi, Giacomo and Pierro, Antonio and Schlatter, Dieter and Collaboration, the Cms},
+   year={2010},
+   month=apr, pages={042046} }
+
 @article{CMS:2024zhe,
     author = "Hayrapetyan, Aram and others",
     collaboration = "CMS",
@@ -125,3 +138,4 @@
   url = {https://www.micron.com/products/storage/ssd/data-center-ssd/6550-ion},
   note = {Accessed: 2024-11-27},
 }
+
