Add figures for sipixel alignment

--- a/references.bib
+++ b/references.bib
@@ -119,6 +119,15 @@
    year={2010},
    month=apr, pages={042046} }
 
+@article{CMS:2022ali, volume={1037},
+   ISSN={0168-9002},
+   url={http://dx.doi.org/10.1016/j.nima.2022.166795},
+   DOI={10.1016/j.nima.2022.166795},
+   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+   publisher={Elsevier BV},
+   year={2022},
+   month=aug, pages={166795} }
+
 @article{CMS:2024zhe,
     author = "Hayrapetyan, Aram and others",
     collaboration = "CMS",
