update references for PCL and Automation.

--- a/references.bib
+++ b/references.bib
@@ -106,6 +106,48 @@
   note = {Accessed: 2024-09-28},
 }
 %
+@article{David_Futyan_2010,
+doi = {10.1088/1742-6596/219/3/032041},
+url = {https://dx.doi.org/10.1088/1742-6596/219/3/032041},
+year = {2010},
+month = {apr},
+publisher = {},
+volume = {219},
+number = {3},
+pages = {032041},
+author = {David Futyan and  (on behalf ofthe Cms Collaboration)},
+title = {Commissioning the CMS alignment and calibration framework},
+journal = {Journal of Physics: Conference Series},
+abstract = {The CMS experiment has developed a powerful framework to ensure the precise and prompt alignment and calibration of its components, which is a major prerequisite to achieve the optimal performance for physics analysis. The prompt alignment and calibration strategy harnesses computing resources both at the Tier-0 site and the CERN Analysis Facility (CAF) to ensure fast turnaround for updating the corresponding database payloads. An essential element is the creation of dedicated data streams concentrating the specific event information required by the various alignment and calibration workflows. The resulting low latency is required for feeding the resulting constants into the prompt reconstruction process, which is essential for achieving swift physics analysis of the LHC data. This report discusses the implementation and the computational aspects of the alignment and calibration framework. Recent commissioning campaigns with cosmic muons, beam halo and simulated data have been used to gain detailed experience with this framework, and results of this validation are reported.}
+}
+
+@article{Cerminara_2015,
+doi = {10.1088/1742-6596/664/7/072009},
+url = {https://dx.doi.org/10.1088/1742-6596/664/7/072009},
+year = {2015},
+month = {dec},
+publisher = {IOP Publishing},
+volume = {664},
+number = {7},
+pages = {072009},
+author = {G Cerminara and B van Besien and on behalf of the CMS Collaboration},
+title = {Automated workflows for critical time-dependent calibrations at the CMS experiment},
+journal = {Journal of Physics: Conference Series},
+abstract = {Fast and efficient methods for the calibration and the alignment of the detector are a key asset to exploit the physics potential of the Compact Muon Solenoid (CMS) detector and to ensure timely preparation of results for conferences and publications. To achieve this goal, the CMS experiment has set up a powerful framework. This includes automated workflows in the context of a prompt calibration concept, which allows for a quick turnaround of the calibration process following as fast as possible any change in running conditions. The presentation will review the design and operational experience of these workflows and the related monitoring system during the LHC Run I and focus on the development, deployment and commissioning in preparation of Run II.}
+}
+
+@techreport{Pigazzini:2853679,
+      author        = "Pigazzini, Simone",
+      collaboration = "CMS",
+      title         = "{Automatic data processing for prompt calibration of the
+                       CMS ECAL}",
+      institution   = "CERN",
+      reportNumber  = "CMS-CR-2023-021",
+      address       = "Geneva",
+      year          = "2023",
+      url           = "https://cds.cern.ch/record/2853679",
+}
+
 @article{Gruttola_2010,
    title={First experience in operating the population of the condition databases for the CMS experiment},
    volume={219},
