Minor HCAL calibrations updates

--- a/references.bib
+++ b/references.bib
@@ -190,3 +190,66 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
   note = {Accessed: 2024-11-27},
 }
 
+@inproceedings{di2015cms,
+  title={The CMS condition database system},
+  author={Di Guida, S and Govi, G and Ojeda, Miguel and Pfeiffer, Andreas and Sipos, R and ATLAS Collaboration and others},
+  booktitle={Journal of Physics: Conference Series},
+  volume={664},
+  number={4},
+  pages={042024},
+  year={2015},
+  organization={IOP Publishing}
+}
+
+
+
+@misc{cms_exotica_summary_plots,
+  author       = {TamasAlmosVami},
+  title        = {CMS Exotica Summary plots fro 13 TeV data},
+  howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/SummaryPlotsEXO13TeV}},
+  note         = {Accessed: 2024-12-15}
+}
+
+@ARTICLE{CMScollab,
+  title     = "The {CMS} experiment at the {CERN} {LHC}",
+  author    = "{The CMS Collaboration} ",
+  journal   = "J. Instrum.",
+  publisher = "IOP Publishing",
+  volume    =  3,
+  number    =  08,
+  pages     = "S08004--S08004",
+  month     =  aug,
+  year      =  2008
+}
+
+@article{cms2016_triggers,
+  title={The CMS trigger system},
+  author={CMS collaboration and others},
+  journal={arXiv preprint arXiv:1609.02366},
+  year={2016}
+}
+
+@techreport{CERN-LHCC-2020-004,
+      collaboration = "CMS",
+      title         = "{The Phase-2 Upgrade of the CMS Level-1 Trigger}",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-2020-004, CMS-TDR-021",
+      address       = "Geneva",
+      year          = "2020",
+      url           = "https://cds.cern.ch/record/2714892",
+      note          = "Final version",
+}
+
+@techreport{Collaboration:2759072,
+      author        = "Collaboration, CMS",
+      title         = "{The Phase-2 Upgrade of the CMS Data Acquisition and High
+                       Level Trigger}",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-2021-007, CMS-TDR-022",
+      address       = "Geneva",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2759072",
+      note          = "This is the final version of the document, approved by the
+                       LHCC",
+}
+
