--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \usepackage{svg}
 \usepackage{graphicx}
 \usepackage{adjustbox}
+\usepackage{lineno}
 \usepackage{xspace}
 
 \setcounter{tocdepth}{3}  % Include subsubsections in the TOC
@@ -70,6 +71,7 @@
 \DeclareSIUnit{\HS}{HS23}
 
 \begin{document}
+\pagewiselinenumbers
 
 % Load colors from Tang palette, among many others.
 \input{colors}
