--- a/references.bib
+++ b/references.bib
@@ -228,7 +228,21 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
   journal={arXiv preprint arXiv:1609.02366},
   year={2016}
 }
-
+@article{CMS:2016ngn,
+    author = "Khachatryan, Vardan and others",
+    collaboration = "CMS",
+    title = "{The CMS trigger system}",
+    eprint = "1609.02366",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-TRG-12-001, CERN-EP-2016-160",
+    doi = "10.1088/1748-0221/12/01/P01020",
+    journal = "JINST",
+    volume = "12",
+    number = "01",
+    pages = "P01020",
+    year = "2017"
+}
 @techreport{CERN-LHCC-2020-004,
       collaboration = "CMS",
       title         = "{The Phase-2 Upgrade of the CMS Level-1 Trigger}",
