--- a/references.bib
+++ b/references.bib
@@ -267,6 +267,17 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
                        LHCC",
 }
 
+@techreport{CMS-PAS-TRK-10-005,
+      collaboration = "CMS",
+      title         = "{Tracking and Primary Vertex Results in First 7 TeV
+                       Collisions}",
+      institution   = "CERN",
+      reportNumber  = "CMS-PAS-TRK-10-005",
+      address       = "Geneva",
+      year          = "2010",
+      url           = "https://cds.cern.ch/record/1279383",
+}
+
 @article{Tracking_2014,
    title={Description and performance of track and primary-vertex reconstruction with the CMS tracker},
    volume={9},
