--- a/references.bib
+++ b/references.bib
@@ -201,8 +201,6 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
   organization={IOP Publishing}
 }
 
-
-
 @misc{cms_exotica_summary_plots,
   author       = {TamasAlmosVami},
   title        = {CMS Exotica Summary plots fro 13 TeV data},
@@ -290,3 +288,64 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
    author={Collaboration, The CMS},
    year={2014},
    month=oct, pages={P10009–P10009} }
+
+@book{Karimaki:368412,
+      author        = "Karimäki, V and Mannelli, M and Siegrist, P and Breuker,
+                       H and Caner, A and Castaldi, R and Freudenreich, K and
+                       Hall, G and Horisberger, R and Huhtinen, M and Cattai, A",
+      collaboration = "CMS",
+      title         = "{The CMS tracker system project: Technical Design Report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "Technical design report. CMS",
+      year          = "1997",
+      url           = "https://cds.cern.ch/record/368412",
+}
+
+@book{CERN-LHCC-2000-016,
+      collaboration = "CMS",
+      title         = "{The CMS tracker: addendum to the Technical Design
+                       Report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "Technical design report. CMS",
+      year          = "2000",
+      url           = "https://cds.cern.ch/record/490194",
+}
+
+@techreport{Dominguez:1481838,
+      author        = "Dominguez, A and Abbaneo, D and Arndt, K and Bacchetta, N
+                       and Ball, A and Bartz, E and Bertl, W and Bilei, G M and
+                       Bolla, G and Cheung, H W K and Chertok, M and Costa, S and
+                       Demaria, N and Daniel Dominguez Vazquez and Ecklund, K and
+                       Erdmann, W and Gill, K and Hall, G and Harder, K and
+                       Hartmann, F and Horisberger, R and Johns, W and Kaestli, H
+                       C and Klein, K and Kotlinski, D and Kwan, S and Pesaresi, M
+                       and Postema, H and Rohe, T and Schäfer, C and Starodumov,
+                       A and Streuli, S and Tricomi, A and Tropea, P and Troska, J
+                       and Vasey, F and Zeuner, W",
+      editor        = "Dominguez, A",
+      title         = "{CMS Technical Design Report for the Pixel Detector
+                       Upgrade}",
+      reportNumber  = "CERN-LHCC-2012-016, CMS-TDR-11",
+      year          = "2012",
+      url           = "http://cds.cern.ch/record/1481838",
+      note          = "Additional contacts: Jeffrey Spalding, Fermilab,
+                       Jeffrey.Spalding@cern.ch Didier Contardo, Universite Claude
+                       Bernard-Lyon I, didier.claude.contardo@cern.ch",
+}
+
+@article{Adam_2021,
+doi = {10.1088/1748-0221/16/02/P02027},
+url = {https://dx.doi.org/10.1088/1748-0221/16/02/P02027},
+year = {2021},
+month = {feb},
+publisher = {},
+volume = {16},
+number = {02},
+pages = {P02027},
+author = {W. Adam and T. Bergauer and D. Blöch and M. Dragicevic and R. Frühwirth and V. Hinger and H. Steininger and W. Beaumont and D. Di Croce and X. Janssen and J. Lauwers and P. Van Mechelen and N. Van Remortel and F. Blekman and S.S. Chhibra and J. De Clercq and J. D'Hondt and S. Lowette and S. Moortgat and A. Morton and K. Skovpen and A.R. Sahasransu and E. Sørensen Bols and P. Van Mulders and Y. Allard and D. Beghin and B. Bilin and B. Clerbaux and G. De Lentdecker and H. Delannoy and W. Deng and L. Favart and R. Goldouzian and A. Grebenyuk and A. Kalsi and M. Mahdavikhorrami and I. Makarenko and L. Moureaux and A. Popov and N. Postiau and F. Robert and Z. Song and L. Thomas and P. Vanlaer and D. Vannerom and Q. Wang and H. Wang and Y. Yang and O. Bondu and G. Bruno and C. Caputo and P. David and C. Delaere and M. Delcourt and A. Giammanco and V. Lemaitre and J. Prisciandaro and A. Saggio and N. Szilasi and M. Vidal Marono and P. Vischia and J. Zobec and V. Brigljević and D. Ferenček and D. Majumder and M. Roguljić and A. Starodumov and T. Susa and P. Eerola and E. Brücken and A. Gädda and T. Lampén and L. Martikainen and E. Tuominen and R. Turpeinen and A. Winkler and P. Luukka and T. Tuuva and J.-L. Agram and J. Andrea and D. Bloch and C. Bonnin and G. Bourgatte and J.-M. Brom and E. Chabert and L. Charles and C. Collard and E. Dangelser and U. Goerlach and C. Grimault and L. Gross and M. Krauth and N. Ollivier-Henry and E. Silva Jiménez and G. Baulieu and G. Boudoul and L. Caponetto and N. Chanon and D. Contardo and P. Dené and T. Dupasquier and G. Galbit and M. Gouzevitch and N. Lumb and L. Mirabito and B. Nodari and S. Perries and M. Vander Donckt and S. Viret and L. Feld and C. Fimmers and M. Fleck and M. Friedrichs and L. Gromann and W. Karpinski and K. Klein and M. Lipinski and P. Malek and D. Meuser and R. Narr and I. Oezen and A. Pauls and G. Pierschel and M. Preuten and M. Rauch and D. Rittich and N. Röwert and J. Sammet and S. Schmitz and J. Schulz and M. Teroerde and M. Wlochal and C. Dziwok and G. Fluegge and O. Pooth and A. Stahl and T. Ziemons and S. Arab and C. Asawatangtrakuldee and V. Botta and A. Burgmeier and L. Calligaris and C. Cheng and S. Choudhury and P. Connor and C. Contreras-Campana and A. De Wit and G. Dolinska and G. Eckerlin and D. Eckstein and T. Eichhorn and E. Gallo and M. Guthoff and K. Hansen and M. Haranko and A. Harb and C. Kleinwort and I. Korol and S. Kousar and R. Mankel and H. Maser and M. Meyer and M. Missiroli and C. Muhl and A. Mussgiller and A. Petrukhin and D. Pitzl and O. Reichelt and M. Savitskyi and P. Schuetze and C. Seitz and S. Spannagel and R. Stever and A. Vargas and R. Walsh and A. Zuber and A. Benecke and H. Biskop and P. Buhmann and M. Centis Vignali and A. Ebrahimi and M. Eich and J. Erfle and F. Feindt and A. Froehlich and E. Garutti and P. Gunnellini and J. Haller and T. Hermanns and A. Hinzmann and G. Kasieczka and R. Klanner and V. Kutzner and T. Lange and T. Lapsien and S. Mättig and Ch. Matthies and M. Matysek and M. Mrowietz and C. Niemeyer and Y. Nissan and K. Pena and A. Perieanu and J. Poehlsen and T. Poehlsen and O. Rieger and P. Schleper and J. Schwandt and D. Schwarz and V. Sola and J. Sonneveld and G. Steinbrück and A. Tews and B. Vormwald and J. Wellhausen and I. Zoi and M. Abbas and L. Ardila and M. Balzer and T. Barvich and M. Baselga and T. Blank and F. Bögelspacher and E. Butz and M. Caselle and F. Colombo and W. De Boer and A. Dierlamm and K. El Morabit and B. Freund and J.-O. Gosewisch and F. Hartmann and S. Heindl and J. Hunt and U. Husemann and R. Koppenhöfer and S. Kudella and S. Maier and S. Mallows and M. Metzler and Th. Muller and M. Musich and A. Nürnberg and O. Sander and D. Schell and M. Schröder and T. Schuh and I. Shvetsov and H.-J. Simonis and P. Steck and M. Wassmer and M. Weber and A. Weddigen and T. Weiler and G. Anagnostou and P. Asenov and P. Assiouras and G. Daskalakis and I. Kazas and A. Kyriakis and D. Loukas and L. Paspalaki and M. Bartók and T. Balázs and K. Márton and F. Siklér and V. Veszprémi and J. Karancsi and P. Mal and S. Swain and A. Bhardwaj and C. Jain and G. Jain and A. Kumar and K. Ranjan and S. Saumya and R. Bhattacharya and S. Dutta and P. Palit and G. Saha and S. Sarkar and P. Cariola and D. Creanza and M. de Palma and G. De Robertis and A. Di Florio and L. Fiore and M. Ince and F. Loddo and G. Maggi and S. Martiradonna and M. Mongelli and S. My and G. Selvaggi and L. Silvestris and S. Albergo and S. Costa and A. Di Mattia and R. Potenza and M.A. Saizu and A. Tricomi and C. Tuve and G. Barbagli and M. Brianzi and A. Cassese and R. Ceccarelli and R. Ciaranfi and V. Ciulli and C. Civinini and R. D'Alessandro and F. Fiori and E. Focardi and G. Latino and P. Lenzi and M. Lizzo and M. Meschini and S. Paoletti and E. Scarlini and R. Seidita and G. Sguazzoni and L. Viliani and F. Ferro and R. Mulargia and E. Robutti and F. Brivio and M.E. Dinardo and P. Dini and S. Gennai and L. Guzzi and S. Malvezzi and D. Menasce and L. Moroni and D. Pedrini and D. Zuolo and P. Azzi and N. Bacchetta and P. Bortignon and D. Bisello and T. Dorigo and M. Tosi and H. Yarar and L. Gaioni and M. Manghisoni and L. Ratti and V. Re and E. Riceputi and G. Traversi and G. Baldinelli and F. Bianchi and G.M. Bilei and S. Bizzaglia and M. Caprai and B. Checcucci and D. Ciangottini and L. Fanò and L. Farnesini and M. Ionica and G. Mantovani and V. Mariani and M. Menichelli and A. Morozzi and F. Moscatelli and D. Passeri and A. Piccinelli and P. Placidi and A. Rossi and A. Saha and A. Santocchia and D. Spiga and L. Storchi and T. Tedeschi and C. Turrioni and K. Androsov and P. Azzurri and G. Bagliesi and A. Basti and R. Beccherle and V. Bertacchi and L. Bianchini and T. Boccali and L. Borrello and F. Bosi and R. Castaldi and M.A. Ciocci and R. Dell'Orso and S. Donato and L. Giannini and A. Giassi and M.T. Grippo and F. Ligabue and G. Magazzu and E. Manca and G. Mandorli and E. Mazzoni and A. Messineo and A. Moggi and F. Morsani and F. Palla and F. Palmonari and S. Parolia and F. Raffaelli and A. Rizzi and S. Roy Chowdhury and P. Spagnolo and R. Tenchini and G. Tonelli and A. Venturi and P.G. Verdini and R. Bellan and M. Costa and R. Covarelli and G. Dellacasa and N. Demaria and S. Garbolino and E. Migliore and E. Monteil and M. Monteno and G. Ortona and L. Pacher and A. Paterno and A. Rivetti and A. Solano and E. Curras Rivera and J. Duarte Campderros and M. Fernandez and A. Garcia Alonso and G. Gomez and F.J. Gonzalez Sanchez and R. Jaramillo Echeverria and D. Moya and I. Vila and A.L. Virto and D. Abbaneo and I. Ahmed and B. Akgun and E. Albert and G. Auzinger and J. Bendotti and G. Bergamin and G. Blanchot and F. Boyer and A. Caratelli and R. Carnesecchi and D. Ceresa and J. Christiansen and K. Cichy and J. Daguin and S. Detraz and D. Deyrail and O. Dondelewski and N. Emriskova and B. Engegaard and F. Faccio and A. Filenius and N. Frank and T. French and K. Gill and G. Hugo and W. Hulek and L.M. Jara Casas and J. Kaplon and K. Kloukinas and A. Kornmayer and N. Koss and L. Kottelat and D. Koukola and M. Kovacs and A. La Rosa and P. Lenoir and R. Loos and A. Marchioro and S. Marconi and I. Mateos Dominguez and S. Mersi and S. Michelis and A. Onnela and S. Orfanelli and T. Pakulski and A. Papadopoulos and S. Pavis and A. Peisert and A. Perez and F. Perez Gomez and J.-F. Pernot and P. Petagna and Q. Piazza and H. Postema and K. Rapacz and S. Scarfí and P. Tropea and J. Troska and A. Tsirou and F. Vasey and B. Verlaat and P. Vichoudis and A. Zografos and L. Zwalinski and W. Bertl and S. Burkhalter and L. Caminada and W. Erdmann and R. Horisberger and H.-C. Kaestli and D. Kotlinski and U. Langenegger and B. Meier and T. Rohe and S. Streuli and F. Bachmair and M. Backhaus and R. Becker and P. Berger and D. di Calafiori and A. Calandri and L. Djambazov and M. Donega and C. Dorfer and P. Eller and C. Grab and D. Hits and J. Hoss and W. Lustermann and M. Meinhard and V. Perovic and M. Reichmann and B. Ristic and U. Roeser and M. Rossini and D. Ruini and V. Tavolaro and R. Wallny and D. Zhu and T. Aarrestad and K. Bösiger and D. Brzhechko and F. Canelli and A. De Cosa and R. Del Burgo and C. Galloni and M. Gienal and D. Hernandez Garland and A. Jofrehei and B. Kilminster and C. Lange and S. Leontsinis and A. Macchiolo and U. Molinatti and R. Maier and V. Mikuni and I. Neutelings and J. Ngadiuba and D. Pinna and G. Rauco and P. Robmann and Y. Takahashi and S. Wiederkehr and D. Wolf and A. Zucchetta and P.-H. Chen and W.-S. Hou and Y.-W. Kao and R.-S. Lu and M. Moya and D. Burns and E. Clement and D. Cussans and J. Goldstein and S. Seif El Nasr-Storey and J.A. Coughlan and K. Harder and K. Manolopoulos and I.R. Tomalin and J. Borg and G. Fedi and G. Hall and G. Iles and M. Pesaresi and A. Rose and K. Uchida and K. Coldham and J. Cole and M. Ghorbani and A. Khan and P. Kyberd and I.D. Reid and R. Bartek and A. Dominguez and R. Uniyal and A.M. Vargas Hernandez and G. Altopp and A. Alzahrani and G. Benelli and B. Burkle and X. Coubez and U. Heintz and E. Hinkle and N. Hinton and J. Hogan and A. Honma and A. Korotkov and J. Lee and D. Li and M. Lukasik and M. Narain and S. Sagir and F. Simpson and E. Spencer and E. Usai and J. Voelker and W.Y. Wong and W. Zhang and E. Cannaert and M. Chertok and J. Conway and G. Funk and G. Haza and F. Jensen and D. Pellett and M. Shi and J. Thomson and K. Tos and T. Welton and F. Zhang and G. Hanson and W. Si and S.B. Cooperstein and N. Deelen and R. Gerosa and S. Krutelyov and V. Sharma and A. Yagil and O. Colegrove and V. Dutta and L. Gouskos and J. Incandela and S. Kyre and H. Qu and M. Quinnan and J.P. Cumalat and W.T. Ford and E. MacDonald and A. Perloff and K. Stenson and K.A. Ulmer and S.R. Wagner and J. Alexander and Y. Bordlemay Padilla and Y. Cheng and J. Conway and D. Cranshaw and A. Datta and K. McDermott and J. Monroy and D. Quach and J. Reichert and A. Ryd and K. Smolenski and C. Strohman and Z. Tao and J. Thom and J.M. Tucker and P. Wittich and M. Zientek and M. Alyari and A. Bakshi and D.R. Berry and G. Bolla and K. Burkett and D. Butler and A. Canepa and H. Cheung and G. Derylo and A. Ghosh and C. Gingu and H. Gonzalez and S. Grünendahl and S. Hasegawa and M. Johnson and S. Kwan and C.M. Lei and R. Lipton and M. Liu and S. Los and V. Martinez Outschoorn and P. Merkel and S. Nahn and A. Prosser and F. Ravera and R. Rivera and B. Schneider and W.J. Spalding and L. Spiegel and S. Timpone and L. Uplegger and M. Verzocchi and E. Voirin and H.A. Weber and R. Habibullah and R. Yohay and H. Becerril Gonzalez and X. Chen and S. Dittmer and A. Evdokimov and O. Evdokimov and C.E. Gerber and D.J. Hofman and C. Mills and T. Roy and S. Rudrabhatla and J. Yoo and M. Alhusseini and S. Durgut and J. Nachtman and Y. Onel and C. Rude and C. Snyder and K. Yi and N. Eminizer and A. Gritsan and S. Kyriacou and P. Maksimovic and C. Mantilla Suarez and J. Roskes and M. Swartz and T. Vami and P. Baringer and A. Bean and Z. Flowers and S. Khalil and J.W. King and A. Kropivnitskaya and E. Schmitz and G. Wilson and A. Ivanov and T. Mitchell and A. Modak and R. Taylor and J.G. Acosta and L.M. Cremaldi and S. Oliveros and L. Perera and D. Summers and K. Bloom and D.R. Claes and C. Fangmeier and F. Golf and I. Kravchenko and J. Siado and I. Iashvili and A. Kharchilava and C. McLean and D. Nguyen and A. Parker and J. Pekkanen and S. Rappoccio and J. Li and A. Parker and L. Skinnari and K. Hahn and Y. Liu and K. Sung and J. Alimena and B. Cardwell and B. Francis and C.S. Hill and S. Malik and S. Norberg and J.E. Ramirez Vargas and R. Chawla and S. Das and S. Gurdasani and M. Jones and A. Jung and A. Koshy and G. Negro and J. Thieman and T. Cheng and J. Dolen and N. Parashar and K.M. Ecklund and S. Freed and M. Kilpatrick and A. Kumar and T. Nussbaum and R. Demina and J. Dulemba and O. Hindrichs and E. Bartz and A. Gandrakotra and Y. Gershtein and E. Halkiadakis and A. Hart and A. Lath and K. Nash and M. Osherson and S. Schnetzer and R. Stone and R. Eusebi and P. D'Angelo and W. Johns and K.O. Padeken},
+title = {The CMS Phase-1 pixel detector upgrade},
+journal = {Journal of Instrumentation},
+abstract = {The CMS detector at the CERN LHC features a silicon pixel detector as its innermost subdetector. The original CMS pixel detector has been replaced with an upgraded pixel system (CMS Phase-1 pixel detector) in the extended year-end technical stop of the LHC in 2016/2017. The upgraded CMS pixel detector is designed to cope with the higher instantaneous luminosities that have been achieved by the LHC after the upgrades to the accelerator during the first long shutdown in 2013–2014. Compared to the original pixel detector, the upgraded detector has a better tracking performance and lower mass with four barrel layers and three endcap disks on each side to provide hit coverage up to an absolute value of pseudorapidity of 2.5. This paper describes the design and construction of the CMS Phase-1 pixel detector as well as its performance from commissioning to early operation in collision data-taking.}
+}
