Few other improvements.

--- a/references.bib
+++ b/references.bib
@@ -335,6 +335,16 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
                        Bernard-Lyon I, didier.claude.contardo@cern.ch",
 }
 
+@techreport{Swartz:687440,
+      author        = "Swartz, Morris",
+      title         = "{A Detailed Simulation of the CMS Pixel Sensor}",
+      institution   = "CERN",
+      reportNumber  = "CMS-NOTE-2002-027",
+      address       = "Geneva",
+      year          = "2002",
+      url           = "https://cds.cern.ch/record/687440",
+}
+
 @article{Adam_2021,
 doi = {10.1088/1748-0221/16/02/P02027},
 url = {https://dx.doi.org/10.1088/1748-0221/16/02/P02027},
