Conclusions and Executive Summary

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 \newcolumntype{Z}{>{\ttfamily\raggedright\hspace{0pt}}p{0.6\textwidth}}
 
 % Prepare content for the title page
-\author{Marco Musich, Jessica Prendi, Thiago Tomei, Mateusz Zarucki}
+\author{Marco Musich, Jessica Prendi, Thiago Tomei, Mateusz Zarucki,\\on behalf of the CMS Collaboration.}
 \title{Optimal HLT Calibrations}
 \subtitle{NGT Task 3.4 2024 Report}
 
@@ -85,6 +85,7 @@
 \tableofcontents
 \newpage
 
+\input{chapters/ExecutiveSummary}
 \input{chapters/Introduction}
 \input{chapters/Calibrations}
 \input{chapters/DAQIntegration}
