--- a/references.bib
+++ b/references.bib
@@ -347,3 +347,14 @@ title = {The CMS Phase-1 pixel detector upgrade},
 journal = {Journal of Instrumentation},
 abstract = {The CMS detector at the CERN LHC features a silicon pixel detector as its innermost subdetector. The original CMS pixel detector has been replaced with an upgraded pixel system (CMS Phase-1 pixel detector) in the extended year-end technical stop of the LHC in 2016/2017. The upgraded CMS pixel detector is designed to cope with the higher instantaneous luminosities that have been achieved by the LHC after the upgrades to the accelerator during the first long shutdown in 2013–2014. Compared to the original pixel detector, the upgraded detector has a better tracking performance and lower mass with four barrel layers and three endcap disks on each side to provide hit coverage up to an absolute value of pseudorapidity of 2.5. This paper describes the design and construction of the CMS Phase-1 pixel detector as well as its performance from commissioning to early operation in collision data-taking.}
 }
+
+@article{French:2001xb,
+    author = "French, M. J. and others",
+    editor = "Ohsugi, T. and Unno, Y. and Sadrozinski, H. F. W. and Nakano, I.",
+    title = "{Design and results from the APV25, a deep sub-micron CMOS front-end chip for the CMS tracker}",
+    doi = "10.1016/S0168-9002(01)00589-7",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "466",
+    pages = "359--365",
+    year = "2001"
+}
