-  title page update with author affiliations -  ALCARECO and ALCARAW added to 2.2 - improve pixel and strip sections - use of title "NGT Demonstrator Candidate Evaluation"

--- a/references.bib
+++ b/references.bib
@@ -163,6 +163,8 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
 
 @article{CMS:2022ali, volume={1037},
    ISSN={0168-9002},
+   title={},
+   autho={CMS Collaboration},
    url={http://dx.doi.org/10.1016/j.nima.2022.166795},
    DOI={10.1016/j.nima.2022.166795},
    journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
@@ -357,4 +359,19 @@ abstract = {The CMS detector at the CERN LHC features a silicon pixel detector a
     volume = "466",
     pages = "359--365",
     year = "2001"
+}
+
+@online{NGT_proposal,
+  author       = {CERN},
+  title        = {Next {G}eneration {HEP T}riggers {P}roposal},
+  year         = {2024},
+  url          = {https://nextgentriggers.web.cern.ch/wp-content/uploads/2024/10/Next-Generation-HEP-Triggers-Proposal.pdf},
+  urldate      = {2024-12-19}
+}
+
+@online{CMSSW_ref,
+  title = {{CMSSW}},
+  author = {{CMS} Collaboration}, 
+  howpublished = {\url{http://cms-sw.github.io}},
+    year = {2023}
 }
