Port DAQ-NGT topical minutes into the DAQ infrastructure section

--- a/references.bib
+++ b/references.bib
@@ -163,8 +163,8 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
 
 @article{CMS:2022ali, volume={1037},
    ISSN={0168-9002},
-   title={},
-   autho={CMS Collaboration},
+   title={Strategies and performance of the CMS silicon tracker alignment during LHC Run 2},
+   author={CMS Collaboration},
    url={http://dx.doi.org/10.1016/j.nima.2022.166795},
    DOI={10.1016/j.nima.2022.166795},
    journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
