--- a/references.bib
+++ b/references.bib
@@ -375,3 +375,11 @@ abstract = {The CMS detector at the CERN LHC features a silicon pixel detector a
   howpublished = {\url{http://cms-sw.github.io}},
     year = {2023}
 }
+
+@misc{hayrapetyan2023development,
+  title={Development of the CMS detector for the CERN LHC Run 3},
+  author={Hayrapetyan, Aram and Tumasyan, Armen and Adam, Wolfgang and Andrejkovic, Janik Walter and Arnold, Bernhard and Bergauer, Herbert and Bergauer, Thomas and Chatterjee, Suman and Damanakis, Konstantinos and Dragicevic, Marko and others},
+  journal={arXiv preprint arXiv:2309.05466},
+  year={2023},
+  publisher={Sept}
+}
