Final HCAL text updates

--- a/references.bib
+++ b/references.bib
@@ -304,4 +304,35 @@
     pages = "042024",
     year = "2015"
 }
-
+% HCAL
+@article{CMS-PRF-18-001,
+    author = "{{CMS Collaboration}}",
+    collaboration = "CMS",
+    title = "{Calibration of the CMS hadron calorimeters using proton-proton collision data at $\sqrt{s} =$ 13 TeV}",
+    eprint = "1910.00079",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-PRF-18-001, CERN-EP-2019-179",
+    doi = "10.1088/1748-0221/15/05/P05002",
+    journal = "JINST",
+    volume = "15",
+    number = "05",
+    pages = "P05002",
+    year = "2020"
+}
+%
+@article{CMS-PRF-18-003,
+    author = "{{CMS Collaboration}}",
+    collaboration = "CMS",
+    title = "{Measurements with silicon photomultipliers of dose-rate effects in the radiation damage of plastic scintillator tiles in the CMS hadron endcap calorimeter}",
+    eprint = "2001.06553",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-PRF-18-003, CERN-EP-2019-266",
+    doi = "10.1088/1748-0221/15/06/P06009",
+    journal = "JINST",
+    volume = "15",
+    number = "06",
+    pages = "P06009",
+    year = "2020"
+}
